# sequent

./: Cargo.toml  test.sqlite
clients/ruby/: .gitignore  Gemfile  sequent.gemspec
clients/ruby/bench/: ips.rb
clients/ruby/lib/: sequent.rb
clients/ruby/lib/sequent/: bytes.rb  client.rb  result.rb  version.rb
src/: lib.rs
