[package]
name = "sequent"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5.0"
log = { version = "0.4", features = ["kv_unstable"] }
signal-hook = "0.3"
simplelog = { version = "0.12", features = ["paris"] }
sqlite = "0.36"
zmq = "0.10"

[build-dependencies]
built = "0.7"

[[bin]]
name = "sequent-server"
path = "src/bin/server.rs"

[[bin]]
name = "sequent"
path = "src/bin/client.rs"
